# metropolis

./: Cargo.toml  README.md
.github/workflows/: release.yml
packaging/aur/: PKGBUILD
src/: city.rs  logos.rs  main.rs
