[package]
name = "metropolis-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["5c0 <5c0@5c0.io>"]
description = "The cyberpunk city powered by your kernel metrics"
license = "MIT"
repository = "https://github.com/5c0/metropolis"
homepage = "https://github.com/5c0/metropolis"
documentation = "https://github.com/5c0/metropolis#readme"
keywords = ["tui", "system-monitor", "cyberpunk", "aesthetic", "rust"]
categories = ["visualization", "command-line-utilities"]
exclude = [
    "dist/",
    "packaging/",
    ".github/",
    ".gitignore",
    "flake.nix",
    "install.sh",
    "docs/*.gif",
]

[[bin]]
name = "metropolis"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
futures = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
